tdf#144943 PPTX import: fix permission for editing

The passwords for editing in PPTX documents
created with PowerPoint weren't asked and verified.

Change-Id: I62eb4fd68aac6422c1221a639f4815459ab556c9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/123130
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>